fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,11 +7,11 @@ body {
   background: #f1f3f5;
   padding: 0;
   margin: 0;
-  /* scroll-behavior: smooth; */
 }
 
 body {
-  /* overflow-x: hidden !important; */
+  width: 100%;
+  /* scroll-behavior: smooth; */
 }
 
 a {
